--- a/root/index.html
+++ b/root/index.html
@@ -133,7 +133,7 @@
 <body>
     <div class="birthday-container">
         <h1>Happy Birthday 🎉</h1>
-        <p id="typing-text">Chúc <b>Hà</b> có một ngày sinh nhật thật ý nghĩa, tràn đầy hạnh phúc và niềm vui!</p>
+        <p id="typing-text">Chúc <b>Hà</b> tuổi mới thêm nhiều niềm vui, gạt bớt điềm xui, tiền chất cao như núi, công việc êm xui!</p>
         <div class="image-container">
             <img src="" id="birthday-image" alt="Birthday Image" width="200">
         </div>
